--- a/test/fixtures/workouts.yml
+++ b/test/fixtures/workouts.yml
@@ -1,19 +1,17 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  client_id: MyString
-  integer: MyString
+  client_id: 1
   notes: MyString
-  date: 2020-05-20 14:38:57
-  startDate: 2020-05-20 14:38:57
-  endDate: 2020-05-20 14:38:57
+  date: 2020-05-21 11:14:10
+  startDate: 2020-05-21 11:14:10
+  endDate: 2020-05-21 11:14:10
   user_id: 1
 
 two:
-  client_id: MyString
-  integer: MyString
+  client_id: 1
   notes: MyString
-  date: 2020-05-20 14:38:57
-  startDate: 2020-05-20 14:38:57
-  endDate: 2020-05-20 14:38:57
+  date: 2020-05-21 11:14:10
+  startDate: 2020-05-21 11:14:10
+  endDate: 2020-05-21 11:14:10
   user_id: 1
